@@ -18,8 +18,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 
 #include "lib.h"
 
-#include <stdlib.h>
-#include <errno.h>
+#include <assert.h> // assert()
+#include <stdio.h> // snprintf()
+#include <string.h> // strchr(), strlen()
+
 #include "font.h"
 #include "searchpath.h"
 #include "device.h"
@@ -58,15 +60,18 @@ void font::command_line_font_dir(const char *dir)
 
 FILE *font::open_file(const char *nm, char **pathp)
 {
+  assert(nm != 0 /* nullptr */);
+  assert(device != 0 /* nullptr */);
   FILE *fp = 0 /* nullptr */;
   // Do not traverse user-specified directories; Savannah #61424.
-  if (0 /* nullptr */ == strchr(nm, '/')) {
+  if ((0 /* nullptr */ == strchr(nm, '/'))
+      && (device != 0 /* nullptr */) && (nm != 0 /* nullptr */)) {
     // Allocate enough for nm + device + 'dev' '/' '\0'.
     size_t expected_size = strlen(nm) + strlen(device) + 5;
     char *filename = new char[expected_size];
-    const size_t actual_size = sprintf(filename, "dev%s/%s", device,
-				       nm);
-    expected_size--; // sprintf() doesn't count the null terminator.
+    const size_t actual_size = snprintf(filename, expected_size,
+					"dev%s/%s", device, nm);
+    expected_size--; // snprintf() doesn't count the null terminator.
     if (actual_size == expected_size)
       fp = font_path.open_file(filename, pathp);
     delete[] filename;
