@@ -1,5 +1,17 @@
 2023-07-29  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/libs/libgroff/fontfile.cpp (font::open_file): Do more
+	parameter validation.  Don't construct a file name for opening
+	from components that are null pointers.  Also `assert()` this
+	since it should be an invariant.  Migrate from `sprintf()` to
+	`snprintf()`; we have the size of the destination buffer handy.
+	Update `#include`s.
+
+	Fixes <https://savannah.gnu.org/bugs/?64485>.  Thanks to Bjarni
+	Ingi Gislason for the report.
+
+2023-07-29  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/preproc/pic/troff.cpp (troff_output::set_location): Do
 	more parameter validation.  Don't generate the two-argument form
 	of the `lf` request if the C string holding the new file name to
